--- a/page1.html
+++ b/page1.html
@@ -16,7 +16,7 @@
 <body>
 <svg width="700" height="700"></svg>
 <script>
-const url = "https://example.com/data/banks.json"; // Replace with your actual URL
+const url = "https://raw.githubusercontent.com/bengoodmanhl/bengoodmanhl.github.io/refs/heads/main/RadarJSON.json"; // Replace with your actual URL
 const width = 700, height = 700;
 const radius = Math.min(width, height) / 2 - 100;
 
