--- a/page1.html
+++ b/page1.html
@@ -14,6 +14,9 @@
 
 </head>
 <body>
+<label for="bankSelect">Select up to 4 banks:</label>
+<select id="bankSelect" multiple size="6" style="width: 200px;"></select>
+
 <svg width="700" height="700"></svg>
 <script>
 const url = "https://raw.githubusercontent.com/bengoodmanhl/bengoodmanhl.github.io/refs/heads/main/RadarJSON.json"; // Replace with your actual URL
@@ -134,7 +137,6 @@ function getScaledRadius(dimension, value) {
   tooltip.transition().duration(300).style("opacity", 0);
 });
 
-
   group.selectAll(".circle")
     .data(d => dimensions.map((dim, i) => {
       const angle = angleSlice * i - Math.PI / 2;
@@ -152,6 +154,25 @@ function getScaledRadius(dimension, value) {
     .attr("cx", d => d.x)
     .attr("cy", d => d.y)
     .attr("fill", d => d.color);
+
+// Populate dropdown with bank names
+const select = d3.select("#bankSelect");
+data.forEach(d => {
+  select.append("option")
+    .attr("value", d.name)
+    .text(d.name);
+});
+
+// Watch for changes and update chart
+select.on("change", function() {
+  const selected = Array.from(this.selectedOptions).map(opt => opt.value);
+  updateRadar(selected.slice(0, 4)); // Limit to 4
+});
+
+
+
+
+
 });
 </script>
 
