--- a/page1.html
+++ b/page1.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Radar Chart with Bank Dropdowns</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="radarChart.js"></script>
   <style>
     body { font-family: sans-serif; background: #f9f9f9; padding: 20px; }
     label { display: inline-block; margin-right: 5px; }
@@ -32,148 +33,6 @@
 
 <svg width="700" height="700"></svg>
 
-<script>
-const url = "https://raw.githubusercontent.com/bengoodmanhl/bengoodmanhl.github.io/refs/heads/main/RadarJSON.json";
-const width = 700, height = 700;
-const radius = Math.min(width, height) / 2 - 100;
-const svg = d3.select("svg")
-  .attr("viewBox", `0 0 ${width} ${height}`)
-  .append("g")
-  .attr("transform", `translate(${width / 2}, ${height / 2})`);
-
-const tooltip = d3.select("body")
-  .append("div")
-  .attr("class", "tooltip")
-  .style("position", "absolute")
-  .style("padding", "6px 12px")
-  .style("background", "#fff")
-  .style("border", "1px solid #999")
-  .style("border-radius", "4px")
-  .style("box-shadow", "0 2px 4px rgba(0,0,0,0.1)")
-  .style("pointer-events", "none")
-  .style("opacity", 0);
-
-d3.json(url).then(data => {
-  const dimensions = Object.keys(data[0]).filter(d => d !== "name");
-  const angleSlice = (2 * Math.PI) / dimensions.length;
-  const color = d3.scaleOrdinal(d3.schemeCategory10);
-  const extentByDimension = {};
-  dimensions.forEach(d => {
-    extentByDimension[d] = d3.extent(data, obj => obj[d]);
-  });
-
-  function getScaledRadius(dimension, value) {
-    const rawValue = Math.max(0.1, value);
-    return d3.scaleLinear()
-      .domain(extentByDimension[dimension])
-      .range([0, 0.9 * radius])(rawValue);
-  }
-
-  for (let level = 0; level <= 5; level++) {
-    const r = radius * (level / 5);
-    const points = dimensions.map((_, i) => {
-      const angle = angleSlice * i - Math.PI / 2;
-      return [Math.cos(angle) * r, Math.sin(angle) * r];
-    });
-    svg.append("polygon")
-      .attr("points", points.map(d => d.join(",")).join(" "))
-      .attr("fill", "none")
-      .attr("stroke", "#ccc");
-  }
-
-  dimensions.forEach((dim, i) => {
-    const angle = angleSlice * i - Math.PI / 2;
-    const x = Math.cos(angle) * (radius + 20);
-    const y = Math.sin(angle) * (radius + 20);
-    svg.append("text")
-      .attr("class", "axisLabel")
-      .attr("x", x)
-      .attr("y", y)
-      .text(dim);
-  });
-
-  const radarLine = d3.lineRadial()
-    .radius(d => d.radius)
-    .angle((d, i) => i * angleSlice)
-    .curve(d3.curveCardinalClosed.tension(0.4));
-
-  const selectIds = ["bankSelect1", "bankSelect2", "bankSelect3", "bankSelect4"];
-
-  selectIds.forEach(id => {
-    const select = d3.select("#" + id);
-    select.append("option").attr("value", "").text("-- Select Bank --");
-    data.forEach(d => {
-      select.append("option")
-        .attr("value", d.name)
-        .text(d.name);
-    });
-    select.on("change", updateFromDropdowns);
-  });
-
-  function updateFromDropdowns() {
-    const selectedNames = selectIds.map(id => {
-      const sel = document.getElementById(id);
-      return sel.value;
-    }).filter(name => name); // Remove empty
-
-    updateRadar([...new Set(selectedNames)]);
-  }
-
-  function updateRadar(selectedNames) {
-    svg.selectAll(".series").remove();
-    const filteredData = data.filter(d => selectedNames.includes(d.name));
-
-    const group = svg.selectAll(".series")
-      .data(filteredData)
-      .enter()
-      .append("g")
-      .attr("class", "series");
-
-    group.append("path")
-      .attr("class", "line")
-      .attr("d", d => {
-        const points = dimensions.map((dim, i) => ({
-          radius: getScaledRadius(dim, d[dim])
-        }));
-        return radarLine(points);
-      })
-      .attr("stroke", d => color(d.name))
-      .attr("fill", d => color(d.name))
-      .attr("fill-opacity", 0.1)
-      .attr("stroke-width", 2)
-      .on("mouseover", function(event, d) {
-        svg.selectAll(".series").transition().duration(200).style("opacity", 0.1);
-        d3.select(this.parentNode).transition().duration(200).style("opacity", 1);
-        tooltip.transition().duration(200).style("opacity", 1);
-        tooltip.html(`<strong>${d.name}</strong>`)
-          .style("left", (event.pageX + 10) + "px")
-          .style("top", (event.pageY - 28) + "px");
-      })
-      .on("mouseout", function() {
-        svg.selectAll(".series").transition().duration(300).style("opacity", 1);
-        tooltip.transition().duration(300).style("opacity", 0);
-      });
-
-    group.selectAll(".circle")
-      .data(d => dimensions.map((dim, i) => {
-        const angle = angleSlice * i - Math.PI / 2;
-        const r = getScaledRadius(dim, d[dim]);
-        return {
-          x: Math.cos(angle) * r,
-          y: Math.sin(angle) * r,
-          color: color(d.name)
-        };
-      }))
-      .enter()
-      .append("circle")
-      .attr("class", "circle")
-      .attr("r", 3)
-      .attr("cx", d => d.x)
-      .attr("cy", d => d.y)
-      .attr("fill", d => d.color);
-  }
-});
-</script>
 
 </body>
 </html>
