--- a/page1backup.html
+++ b/page1backup.html
@@ -8,9 +8,19 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="controls">
+    <label>Select up to 4 banks:</label>
+    <select class="bank-select" id="bank1"></select>
+    <select class="bank-select" id="bank2"></select>
+    <select class="bank-select" id="bank3"></select>
+    <select class="bank-select" id="bank4"></select>
+  </div>
+
   <div class="chart-container">
     <svg viewBox="0 0 700 700" preserveAspectRatio="xMidYMid meet"></svg>
   </div>
+
   <script src="radarChart.js"></script>
 </body>
+
 </html>
