--- a/page1backup.html
+++ b/page1backup.html
@@ -9,11 +9,17 @@
 </head>
 <body>
   <div class="controls">
-    <label>Select up to 4 banks:</label>
-    <select class="bank-select" id="bank1"></select>
-    <select class="bank-select" id="bank2"></select>
-    <select class="bank-select" id="bank3"></select>
-    <select class="bank-select" id="bank4"></select>
+   <label for="bank1">Bank 1:</label>
+  <select id="bank1"></select>
+
+  <label for="bank2">Bank 2:</label>
+  <select id="bank2"></select>
+
+  <label for="bank3">Bank 3:</label>
+  <select id="bank3"></select>
+
+  <label for="bank4">Bank 4:</label>
+  <select id="bank4"></select>
   </div>
 
   <div class="chart-container">
