--- a/page1backup.html
+++ b/page1backup.html
@@ -3,31 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Responsive Smoothed Radar Chart</title>
+  <title>Responsive Radar Chart</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="controls">
-    <label for="bank1">Bank 1:</label>
-    <select id="bank1"></select>
+  <div class="layout">
+    <div class="controls">
+      <label for="bank1">Bank 1:</label>
+      <select id="bank1"></select>
 
-    <label for="bank2">Bank 2:</label>
-    <select id="bank2"></select>
+      <label for="bank2">Bank 2:</label>
+      <select id="bank2"></select>
 
-    <label for="bank3">Bank 3:</label>
-    <select id="bank3"></select>
+      <label for="bank3">Bank 3:</label>
+      <select id="bank3"></select>
 
-    <label for="bank4">Bank 4:</label>
-    <select id="bank4"></select>
-  </div>
+      <label for="bank4">Bank 4:</label>
+      <select id="bank4"></select>
+    </div>
 
-  <div class="chart-container">
-    <svg viewBox="0 0 700 700" preserveAspectRatio="xMidYMid meet"></svg>
+    <div class="chart-container">
+      <svg viewBox="0 0 700 700" preserveAspectRatio="xMidYMid meet"></svg>
+    </div>
   </div>
 
   <script src="radarChart.js"></script>
 </body>
-
-
 </html>
