--- a/page1backup.html
+++ b/page1backup.html
@@ -6,6 +6,22 @@
   <title>Responsive Radar Chart</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    .tooltip {
+      position: absolute;
+      background: #fff;
+      border: 1px solid #ccc;
+      padding: 6px 10px;
+      font-size: 13px;
+      pointer-events: none;
+      opacity: 0;
+      transition: opacity 0.3s ease;
+    }
+    .legend-item {
+      font-family: sans-serif;
+      font-size: 14px;
+    }
+  </style>
 </head>
 <body>
   <div class="layout">
@@ -26,6 +42,9 @@
     <div class="chart-container">
       <svg viewBox="0 0 700 700" preserveAspectRatio="xMidYMid meet"></svg>
     </div>
+
+    <!-- 🔥 Insert legend here -->
+    <div id="legend" style="margin-top: 20px;"></div>
   </div>
 
   <script src="radarChart.js"></script>
