--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <a href = "index.html">Home</a>
-  <a href = "page1.html">Page1</a>
+  <a href = "benchmarking.html">Benchmarking</a>
 </head>
 <body>
   
