--- a/benchmarking.html
+++ b/benchmarking.html
@@ -15,7 +15,7 @@
 
   <script>
     // Replace this URL with your actual data source
-    const dataUrl = 'https://your-data-source.com/banks-data.json';
+    const dataUrl = 'https://raw.githubusercontent.com/bengoodmanhl/bengoodmanhl.github.io/refs/heads/main/RadarJSON.json';
 
     // List of dropdown IDs
     const dropdowns = [
