--- a/benchmarking.html
+++ b/benchmarking.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bank Selector with Normalization</title>
+  <title>Bank benchmarking</title>
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="radarChart.js"></script>
+
 </head>
 <body>
   <h2>Select Up to 5 Banks</h2>
@@ -12,6 +15,7 @@
   <select id="bankSelect4"></select>
   <select id="bankSelect5"></select>
 
+  <svg id="radarChart" width="600" height="600"></svg>
   <!-- Link external script -->
   <script src="dataManipulation.js"></script>
 </body>
