--- a/benchmarking.html
+++ b/benchmarking.html
@@ -17,7 +17,7 @@
 
   <svg id="radarChart" width="500" height="500"></svg>
 <script type="module">
-  import { drawRadarChart } from './Radar.js';
+  import { drawRadarChart } from './radarChart.js';
 
   // Example: using your normalizedBankData from the page
   drawRadarChart({
