--- a/benchmarking.html
+++ b/benchmarking.html
@@ -15,7 +15,9 @@
   <select id="bankSelect3"></select>
   <select id="bankSelect4"></select>
   <select id="bankSelect5"></select>
-
+  
+  <div id="axisSelector"></div>
+  
   <svg id="radarChart" width="600" height="600"></svg>
 
   <script type="module" src="main.js"></script>
