--- a/benchmarking.html
+++ b/benchmarking.html
@@ -1,120 +1,23 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Dynamic Bank Selector</title>
+  <meta charset="UTF-8" />
+  <title>Bank Benchmarking</title>
+  <script src="https://d3js.org/d3.v7.min.js"></script>
   <style>
-    body { font-family: sans-serif; padding: 20px; }
-    label { display: inline-block; width: 70px; font-weight: bold; }
-    select { margin-bottom: 15px; width: 320px; padding: 5px; }
+    select { margin-right: 10px; }
   </style>
 </head>
 <body>
+  <h2>Select Up to 5 Banks</h2>
+  <select id="bankSelect1"></select>
+  <select id="bankSelect2"></select>
+  <select id="bankSelect3"></select>
+  <select id="bankSelect4"></select>
+  <select id="bankSelect5"></select>
 
-  <h2>Select Banks to Compare</h2>
+  <svg id="radarChart" width="600" height="600"></svg>
 
-  <div>
-    <label for="bank1">Bank 1:</label>
-    <select id="bank1"><option>Loading...</option></select><br>
-    <label for="bank2">Bank 2:</label>
-    <select id="bank2"><option>Loading...</option></select><br>
-    <label for="bank3">Bank 3:</label>
-    <select id="bank3"><option>Loading...</option></select><br>
-    <label for="bank4">Bank 4:</label>
-    <select id="bank4"><option>Loading...</option></select>
-  </div>
-
-  <script>
-    const dataUrl = 'https://raw.githubusercontent.com/bengoodmanhl/bengoodmanhl.github.io/refs/heads/main/RadarJSON.json'; // 🌐 Replace with your actual JSON URL
-
-
-let normalizedData = [];
-
-function zNormalize(data, keys) {
-  const result = [];
-  const stats = {};
-
-  // Calculate mean and std dev for each key
-  keys.forEach(key => {
-    const values = data.map(d => parseFloat(d[key]));
-    const mean = values.reduce((sum, val) => sum + val, 0) / values.length;
-    const stdDev = Math.sqrt(values.reduce((sum, val) => sum + Math.pow(val - mean, 2), 0) / values.length);
-    stats[key] = { mean, stdDev };
-  });
-
-  // Normalize data
-  data.forEach(d => {
-    const norm = { name: d.name };
-    keys.forEach(key => {
-      const { mean, stdDev } = stats[key];
-      norm[key] = ((d[key] - mean) / stdDev).toFixed(3);
-    });
-    result.push(norm);
-  });
-
-  return result;
-}
-
-// ✅ Function to populate dropdowns with optional preselection for the first two
-function populateDropdowns(bankNames) {
-  const dropdownIds = ['bank1', 'bank2', 'bank3', 'bank4'];
-  dropdownIds.forEach((id, i) => {
-    const select = document.getElementById(id);
-    select.innerHTML = '<option value="">-- Select a bank --</option>';
-    bankNames.forEach((name, index) => {
-      const option = document.createElement('option');
-      option.value = name;
-      option.textContent = name;
-      if ((i === 0 && index === 0) || (i === 1 && index === 1)) {
-        option.selected = true;
-      }
-      select.appendChild(option);
-    });
-  });
-}
-
-// Initial fetch
-fetch(dataUrl)
-  .then(res => res.json())
-  .then(rawData => {
-    const fields = [
-      'ComplaintsPer1000',
-      'UpheldPercent',
-      'Closed8WeeksPlusPercent',
-      'FOSUpheldPercent',
-      'FOSCasesPerMillion'
-    ];
-    normalizedData = zNormalize(rawData, fields);
-    populateDropdowns(normalizedData.map(d => d.name));
-  })
-  .catch(error => {
-    console.error('Error fetching or processing data:', error);
-  });
-
-function createSelectedDataSet() {
-  const selectedNames = [
-    document.getElementById('bank1').value,
-    document.getElementById('bank2').value,
-    document.getElementById('bank3').value,
-    document.getElementById('bank4').value
-  ].filter(Boolean);
-
-  const selectedData = normalizedData.filter(bank => selectedNames.includes(bank.name));
-  
-  return selectedData.map(bank => ({
-    label: bank.name,
-    data: [
-      parseFloat(bank.ComplaintsPer1000),
-      parseFloat(bank.UpheldPercent),
-      parseFloat(bank.Closed8WeeksPlusPercent),
-      parseFloat(bank.FOSUpheldPercent),
-      parseFloat(bank.FOSCasesPerMillion)
-    ]
-  }));
-}
-
-const radarData = createSelectedDataSet();
-</script>
-
+  <script type="module" src="main.js"></script>
 </body>
 </html>
