--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <a href = "index.html">Home</a>
   <a href = "benchmarking.html">Benchmarking</a>
+  <a href = "FOSDecisions.html">FOS Decisions</a>a>
 </head>
 <body>
   
