--- a/FOSDecisions.html
+++ b/FOSDecisions.html
@@ -1,1 +1,81 @@
-HTML
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>D3 Sankey Diagram</title>
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/d3-sankey@0.12.3/dist/d3-sankey.min.js"></script>
+  <style>
+    body {
+      font-family: sans-serif;
+    }
+    .node rect {
+      fill-opacity: 0.8;
+      shape-rendering: crispEdges;
+    }
+    .node text {
+      font-size: 12px;
+      pointer-events: none;
+    }
+    .link {
+      fill: none;
+      stroke-opacity: 0.4;
+    }
+  </style>
+</head>
+<body>
+  <svg width="800" height="500"></svg>
+
+  <script>
+    const svg = d3.select("svg"),
+          width = +svg.attr("width"),
+          height = +svg.attr("height");
+
+    const sankey = d3.sankey()
+      .nodeWidth(20)
+      .nodePadding(10)
+      .extent([[1, 1], [width - 1, height - 6]]);
+
+    const color = d3.scaleOrdinal(d3.schemeCategory10);
+
+    d3.json("SankeyData.json").then(data => {
+      const graph = sankey({
+        nodes: data.nodes.map(d => Object.assign({}, d)),
+        links: data.links.map(d => Object.assign({}, d))
+      });
+
+      svg.append("g")
+        .selectAll("path")
+        .data(graph.links)
+        .join("path")
+          .attr("class", "link")
+          .attr("d", d3.sankeyLinkHorizontal())
+          .attr("stroke", d => color(d.source.id))
+          .attr("stroke-width", d => Math.max(1, d.width));
+
+      const node = svg.append("g")
+        .selectAll("g")
+        .data(graph.nodes)
+        .join("g")
+          .attr("class", "node")
+          .attr("transform", d => `translate(${d.x0},${d.y0})`);
+
+      node.append("rect")
+          .attr("height", d => d.y1 - d.y0)
+          .attr("width", d => d.x1 - d.x0)
+          .attr("fill", d => color(d.id));
+
+      node.append("text")
+          .attr("x", -6)
+          .attr("y", d => (d.y1 - d.y0) / 2)
+          .attr("dy", "0.35em")
+          .attr("text-anchor", "end")
+          .text(d => d.id)
+        .filter(d => d.x0 < width / 2)
+          .attr("x", 6 + sankey.nodeWidth())
+          .attr("text-anchor", "start");
+    });
+  </script>
+</body>
+</html>
+
