--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <a href = "index.html">Home</a>
-  <a href = "benchmarking.html">Benchmarking</a>
-  <a href = "FOSDecisions.html">FOS Decisions</a>
+  <title>Home Page</title>
 </head>
-<body>
-  
-    <h1>Home</h1>
-    <p>Main stuff</p>
-    
 
-   
-</body>    
+<body>
+  <nav>
+    <a href="index.html">Home</a> |
+    <a href="benchmarking.html">Benchmarking</a> |
+    <a href="FOSDecisions.html">FOS Decisions</a>
+  </nav>
+
+  <h1>Home</h1>
+  <p>Main stuff</p>
+</body>
+
 </html>
