--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home Page</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Website</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
-  <nav>
-    <a href="index.html">Home</a> |
-    <a href="benchmarking.html">Benchmarking</a> |
+
+  <!-- Top Bar -->
+  <header class="top-bar">
+    <img src="logo.png" alt="Logo" class="logo" />
+    <h1 class="site-name">My Website</h1>
+  </header>
+
+  <!-- Navigation Bar -->
+  <nav class="nav-bar">
+    <a href="index.html">Home</a>
+    <a href="benchmarking.html">Benchmarking</a>
     <a href="FOSDecisions.html">FOS Decisions</a>
   </nav>
 
-  <h1>Home</h1>
-  <p>Main stuff</p>
-</body>
+  <!-- Main Content -->
+  <main>
+    <h2>Home</h2>
+    <p>Main stuff</p>
+  </main>
 
+</body>
 </html>
